--- a/myfirstansible.yml
+++ b/myfirstansible.yml
@@ -5,4 +5,9 @@
    - name: i want to install apache2 on node server
      apt:  
       name: apache2
-      state: absent 
+      state: present 
+
+   - name: i want to start webserver (service apache2 start)
+     service: 
+      name: apache2
+      state: started
