--- a/myfirstansible.yml
+++ b/myfirstansible.yml
@@ -7,10 +7,16 @@
      apt:  
       name: apache2
       state: present 
-     when: ansible_os_family=='Debian'
+     when: ansible_os_family=="Debian"
 
    - name: i want to start webserver (service apache2 start)
      service: 
       name: apache2
       state: started
-     when: ansible_os_family=='Debian'
+     when: ansible_os_family=="Debian"
+
+   - name: install httpd webserver on Redhat node
+     dnf: 
+       name: httpd 
+       state: present
+     when: ansible_os_family=="Redhat"
