--- a/myfirstansible.yml
+++ b/myfirstansible.yml
@@ -1,28 +1,28 @@
 ---
-- hosts: all
+- hosts: mywebservers
   become: yes
   gather_facts: yes
   tasks: 
    - name: i want to install apache2 on node server
      apt:  
-      name: apache2
+      name: "{{mywebpackonubuntu}}"
       state: present 
      when: ansible_os_family=="Debian"
 
    - name: i want to start webserver (service apache2 start)
-     service: 
+     service: "{{mywebpackonubuntu}}"
       name: apache2
       state: started
      when: ansible_os_family=="Debian"
 
    - name: install httpd webserver on Redhat node
      dnf: 
-       name: httpd 
+       name: "{{mywebpacknRedhat}}"
        state: present
      when: ansible_os_family=="Redhat"
 
    - name: install httpd webserver on Redhat node
      service: 
-       name: httpd 
+       name: "{{mywebpacknRedhat}}" 
        state: started
      when: ansible_os_family=="Redhat"
