--- a/myfilehand.yml
+++ b/myfilehand.yml
@@ -3,3 +3,13 @@
   become: yes
   tasks: 
     - include_tasks: myfile.yml
+    - name: create a directory
+      file:
+        path: /home/naz/myfolder
+        state: directory
+
+    - name: copy static file
+      copy:
+       src: mystaticfile
+       dest: /home/naz/myfolder/mystaticfile   
+
