--- a/myfilehand.yml
+++ b/myfilehand.yml
@@ -28,5 +28,11 @@
       template:
           src: myinde.j2
           dest: /var/www/html/index.html
+          notify: startwebserver
 
 
+      handlers:
+      - name: startwebserver
+        service:
+          name: apache2
+          state: started
