--- a/mywebrole/handlers/main.yml
+++ b/mywebrole/handlers/main.yml
@@ -1,2 +1,6 @@
 ---
-# handlers file for mywebrole
+# handlers file for my
+- name: startwebserver
+  service:
+          name: apache2
+          state: started
